[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Game/GameLayer/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Game/GameControllerMulti.gd" type="Script" id=2]
[ext_resource path="res://src/Levels/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Game/GameLayer/GameOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Game/GameLayer/EndGameMenu.tscn" type="PackedScene" id=6]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 8

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]
visible = false

[node name="EndGameMenu" parent="InterfaceLayer" instance=ExtResource( 6 )]
pause_mode = 2
visible = false

[node name="Black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="Black"]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 1

[node name="ViewportContainer1" type="ViewportContainer" parent="Black/HSplitContainer"]
margin_right = 506.0
margin_bottom = 600.0
rect_min_size = Vector2( 394, 480 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="ViewportLevel1" type="Viewport" parent="Black/HSplitContainer/ViewportContainer1"]
size = Vector2( 506, 600 )
size_override_stretch = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="CanvasLayer" type="CanvasLayer" parent="Black/HSplitContainer/ViewportContainer1/ViewportLevel1"]

[node name="GameOverlay" parent="Black/HSplitContainer/ViewportContainer1/ViewportLevel1/CanvasLayer" instance=ExtResource( 5 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Black/HSplitContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="ViewportLevel2" type="Viewport" parent="Black/HSplitContainer/ViewportContainer2"]
size = Vector2( 506, 600 )
size_override_stretch = true
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="CanvasLayer" type="CanvasLayer" parent="Black/HSplitContainer/ViewportContainer2/ViewportLevel2"]

[node name="GameOverlay" parent="Black/HSplitContainer/ViewportContainer2/ViewportLevel2/CanvasLayer" instance=ExtResource( 5 )]

[node name="ParallaxBackground" parent="Black/HSplitContainer/ViewportContainer2/ViewportLevel2" instance=ExtResource( 3 )]

[connection signal="configuration_toggled" from="InterfaceLayer/PauseMenu" to="." method="_on_PauseMenu_configuration_toggled"]
[connection signal="game_abandoned" from="InterfaceLayer/PauseMenu" to="." method="_on_game_lost"]
[connection signal="pause_toggled" from="InterfaceLayer/PauseMenu" to="." method="_on_pause_toggled"]
[connection signal="game_exited" from="InterfaceLayer/EndGameMenu" to="." method="_on_EndGameMenu_game_exited"]
[connection signal="pause_toggled" from="Black/HSplitContainer/ViewportContainer1/ViewportLevel1/CanvasLayer/GameOverlay" to="." method="_on_pause_toggled"]
[connection signal="pause_toggled" from="Black/HSplitContainer/ViewportContainer2/ViewportLevel2/CanvasLayer/GameOverlay" to="." method="_on_pause_toggled"]
